Interactive start button
I decided to create an interactive start button, with an aesthetic background.
I will center the name and change the font.

--- a/index.html
+++ b/index.html
@@ -12,24 +12,21 @@ EMAIL: galjufou@uci.edu
   <meta name="author" content="Ghadeer Al Jufout">
   <meta name="description" content="Personal portfolio of Ghadeer Al Jufout, Software Engineering student at UC Irvine.">
   <title>Ghadeer Al Jufout | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <header>
+  <header class="hero" id="top">
     <h1>Ghadeer Al Jufout</h1>
-    <p>Software Engineering Student · UC Irvine</p>
 
-    <nav aria-label="Main navigation">
-      <a href="index.html">Home</a> |
-      <a href="projects.html">Projects</a> |
-      <a href="https://github.com/Ghadeer122003" target="_blank" rel="noopener">GitHub</a> |
-      <a href="https://www.linkedin.com/in/ghadeer03" target="_blank" rel="noopener">LinkedIn</a>
-    </nav>
+    <a class="open-btn" href="#about" aria-label="Open and jump to About Me">
+      <span>OPEN</span>
+    </a>
   </header>
 
   <main>
 
-    <section>
+    <section id="about">
       <h2>About Me</h2>
       <p>
         I am a software engineering student at UC Irvine with interests in
@@ -39,35 +36,7 @@ EMAIL: galjufou@uci.edu
       </p>
     </section>
 
-    <section>
-      <h2>Featured Projects</h2>
-      <ul>
-        <li>AutoML Selector: model selection for distributed systems</li>
-        <li>P2P File Sharing System</li>
-        <li>Custom Search Engine Project</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Research Interests</h2>
-      <p>
-        I am interested in machine learning systems, distributed systems,
-        and human-centered design. I enjoy exploring how models can be made
-        more reliable, efficient, and usable in real-world applications.
-      </p>
-
-      <h3>Research Topics I'm interested in:</h3>
-      <ul>
-        <li>Model selection and evaluation for real-world ML systems</li>
-        <li>Scalable and reliable distributed software</li>
-      </ul>
-    </section>
-
-
   </main>
 
-  <footer>
-    <p>© 2026 Ghadeer Al Jufout</p>
-  </footer>
-
 </body>
+</html>
