--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@ EMAIL: galjufou@uci.edu
     <a class="open-btn" href="#about" aria-label="Open and jump to About Me">
       <span>OPEN</span>
     </a>
+    <div class="social-links">
+  <a href="https://github.com/Ghadeer122003" target="_blank" aria-label="GitHub">
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M12 .5C5.73.5.5 5.74.5 12.18c0 5.15 3.44 9.52 8.21 11.06.6.11.82-.27.82-.59v-2.09c-3.34.75-4.04-1.64-4.04-1.64-.55-1.44-1.35-1.83-1.35-1.83-1.1-.78.08-.76.08-.76 1.22.09 1.86 1.28 1.86 1.28 1.08 1.9 2.83 1.35 3.52 1.03.11-.8.42-1.35.76-1.66-2.66-.31-5.47-1.36-5.47-6.04 0-1.34.46-2.44 1.22-3.3-.12-.31-.53-1.56.12-3.25 0 0 1-.33 3.3 1.26a11.2 11.2 0 0 1 6 0c2.3-1.59 3.3-1.26 3.3-1.26.65 1.69.24 2.94.12 3.25.76.86 1.22 1.96 1.22 3.3 0 4.69-2.82 5.72-5.5 6.03.43.38.82 1.13.82 2.28v3.38c0 .33.22.7.83.58 4.77-1.54 8.2-5.91 8.2-11.05C23.5 5.74 18.27.5 12 .5z"/>
+    </svg>
+  </a>
+
+  <a href="https://www.linkedin.com/in/ghadeer03" target="_blank" aria-label="LinkedIn">
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M4.98 3.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM3 9h4v12H3zM9 9h3.8v1.6h.05c.53-1 1.82-2.1 3.75-2.1 4 0 4.7 2.6 4.7 6V21h-4v-5.3c0-1.3 0-3-1.9-3s-2.1 1.4-2.1 2.9V21H9z"/>
+    </svg>
+  </a>
+</div>
+
   </header>
 
   <main>
