Resume + About me + more styling
Added my resume, and fixed my about me to be more detailed, added more style to the page.

--- a/index.html
+++ b/index.html
@@ -39,16 +39,48 @@ EMAIL: galjufou@uci.edu
   </header>
 
   <main>
+<section id="about" class="about">
+  <h2>About Ghadeer</h2>
 
-    <section id="about">
-      <h2>About Me</h2>
-      <p>
-        I am a software engineering student at UC Irvine with interests in
-        building reliable, clean software systems. I enjoy learning new
-        technologies, working on meaningful projects, and improving my
-        problem-solving skills through hands-on experience.
-      </p>
-    </section>
+  <div class="about-layout">
+    <nav class="about-nav" aria-label="About page links">
+    <a href="projects.html">Projects</a>
+    <a href="#research">Research</a>
+    <a href="resume.pdf" target="_blank">Resume</a>
+    <a href="#contact">Contact</a>
+    </nav>
+
+<div class="about-text">
+  <p>
+    I am a Software Engineering student at UC Irvine with a strong interest in how modern
+    software systems are built, scaled, and maintained. I am especially drawn to areas
+    like cloud development and DevOps because they shape how technology actually reaches
+    people in reliable and meaningful ways.
+  </p>
+
+  <p>
+    I find today’s software tools fascinating. The ability to build, deploy, and improve
+    systems continuously has changed how we think about technology, collaboration, and
+    problem solving. Being able to work with these tools feels both powerful and exciting,
+    and it motivates me to keep learning and exploring what is possible.
+  </p>
+
+  <p>
+    I enjoy learning new technologies as projects demand and adapting to new environments
+    along the way. I care about writing code that is clear and thoughtful, but I also think
+    about how systems behave over time, how dependable they are, and how they grow as
+    needs change.
+  </p>
+
+  <p>
+    What excites me most about software engineering is that it is never finished. There
+    is always something new to learn, refine, or improve, and I enjoy being part of a
+    field that is constantly evolving alongside the people who use it.
+  </p>
+</div>
+
+
+</section>
 
   </main>
 
