Contact Me Section

--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@ EMAIL: galjufou@uci.edu
   <h2>About Ghadeer</h2>
 
   <div class="about-layout">
-    <nav class="about-nav" aria-label="About page links">
+    <nav class="about-nav" aria-label="Site navigation">
+    <a href="#about">About</a>
     <a href="projects.html">Projects</a>
     <a href="#research">Research</a>
     <a href="resume.pdf" target="_blank">Resume</a>
     <a href="#contact">Contact</a>
-    </nav>
+  </nav>
+
 
 <div class="about-text">
   <p>
@@ -78,9 +80,32 @@ EMAIL: galjufou@uci.edu
     field that is constantly evolving alongside the people who use it.
   </p>
 </div>
-
-
 </section>
+
+<section id="contact" class="contact">
+  <h2>CONTACT ME</h2>
+  <form class="contact-form"
+        action="mailto:galjufou@uci.edu"
+        method="post"
+        enctype="text/plain">
+
+    <label>
+      <span>Your name</span>
+      <input type="text" name="name" required>
+    </label>
+
+    <label>
+      <span>Your email</span>
+      <input type="email" name="email" required>
+    </label>
+
+    <label>
+      <span>Your message</span>
+      <textarea name="message" rows="2" required></textarea>
+    </label>
+
+    <button type="submit" class="send-btn">Send</button>
+  </form>
 
   </main>
 
