--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@ EMAIL: galjufou@uci.edu
 
   <div class="about-layout">
     <nav class="about-nav" aria-label="Site navigation">
-    <a href="#about">About</a>
+    <a href="index.html#about">About</a>
     <a href="projects.html">Projects</a>
-    <a href="#research">Research</a>
-    <a href="resume.pdf" target="_blank">Resume</a>
-    <a href="#contact">Contact</a>
+    <a href="research.html">Research</a>
+    <a href="resume.pdf" target="_blank" rel="noopener">Resume</a>
+    <a href="contact.html">Contact</a>
   </nav>
+
 
 
 <div class="about-text">
@@ -81,31 +82,6 @@ EMAIL: galjufou@uci.edu
   </p>
 </div>
 </section>
-
-<section id="contact" class="contact">
-  <h2>CONTACT ME</h2>
-  <form class="contact-form"
-        action="mailto:galjufou@uci.edu"
-        method="post"
-        enctype="text/plain">
-
-    <label>
-      <span>Your name</span>
-      <input type="text" name="name" required>
-    </label>
-
-    <label>
-      <span>Your email</span>
-      <input type="email" name="email" required>
-    </label>
-
-    <label>
-      <span>Your message</span>
-      <textarea name="message" rows="2" required></textarea>
-    </label>
-
-    <button type="submit" class="send-btn">Send</button>
-  </form>
 
   </main>
 
