A link to home page from all other pages

--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,12 @@ EMAIL: galjufou@uci.edu
     <section class="contact-page">
       <div class="page-layout">
         <nav class="about-nav" aria-label="Site navigation">
-          <a href="index.html#about">About</a>
-          <a href="projects.html">Projects</a>
-          <a href="research.html">Research</a>
-          <a href="resume.pdf" target="_blank" rel="noopener">Resume</a>
-          <a href="contact.html" aria-current="page">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#about">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="research.html">Research</a>
+        <a href="resume.pdf" target="_blank">Resume</a>
+        <a href="contact.html">Contact</a>
         </nav>
 
         <div class="page-content">
