--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@ EMAIL: galjufou@uci.edu
 
   <div class="about-layout">
     <nav class="about-nav" aria-label="Site navigation">
+    <a href="index.html">Home</a>
     <a href="index.html#about">About</a>
     <a href="projects.html">Projects</a>
     <a href="research.html">Research</a>
-    <a href="resume.pdf" target="_blank" rel="noopener">Resume</a>
+    <a href="resume.pdf" target="_blank">Resume</a>
     <a href="contact.html">Contact</a>
-  </nav>
-
-
-
+    </nav>
+    
 <div class="about-text">
   <p>
     I am a Software Engineering student at UC Irvine with a strong interest in how modern
