Added a place for a pfp in the about me section + removed the research section + fixed the styling of the options menu

--- a/index.html
+++ b/index.html
@@ -43,16 +43,26 @@ EMAIL: galjufou@uci.edu
   <h2>About Ghadeer</h2>
 
   <div class="about-layout">
+
+  <!-- LEFT COLUMN -->
+  <aside class="about-left">
+    <img
+      class="profile-pic"
+      src="images/profile.jpg"
+      alt="Photo of Ghadeer Al Jufout"
+    >
+
     <nav class="about-nav" aria-label="Site navigation">
-    <a href="index.html">Home</a>
-    <a href="index.html#about">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="research.html">Research</a>
-    <a href="resume.pdf" target="_blank">Resume</a>
-    <a href="contact.html">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="index.html#about">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="resume.pdf" target="_blank">Resume</a>
+      <a href="contact.html">Contact</a>
     </nav>
-    
-<div class="about-text">
+  </aside>
+
+  <!-- RIGHT COLUMN -->
+  <div class="about-text">
   <p>
     I am a Software Engineering student at UC Irvine with a strong interest in how modern
     software systems are built, scaled, and maintained. I am especially drawn to areas
