Added a page for each project along with images & descriptions for each + made sure the design is compatible with different layouts

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ EMAIL: galjufou@uci.edu
         <a href="index.html">Home</a>
         <a href="index.html#about">About</a>
         <a href="projects.html">Projects</a>
-        <a href="resume.pdf" target="_blank">Resume</a>
+        <a href="resume.html">Resume</a>
         <a href="contact.html">Contact</a>
         </nav>
 
