--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ EMAIL: galjufou@uci.edu
   </a>
 </div>
 
+
   </header>
 
   <main>
@@ -56,7 +57,7 @@ EMAIL: galjufou@uci.edu
       <a href="index.html">Home</a>
       <a href="index.html#about">About</a>
       <a href="projects.html">Projects</a>
-      <a href="resume.pdf" target="_blank">Resume</a>
+      <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
     </nav>
   </aside>
@@ -89,8 +90,11 @@ EMAIL: galjufou@uci.edu
     is always something new to learn, refine, or improve, and I enjoy being part of a
     field that is constantly evolving alongside the people who use it.
   </p>
-</div>
+  </div> <!-- closes .about-text -->
+
+  </div> <!-- closes .about-layout -->
 </section>
+
 
   </main>
 
