--- a/project-3.html
+++ b/project-3.html
@@ -9,7 +9,7 @@ EMAIL: galjufou@uci.edu
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Ghadeer Al Jufout">
   <meta name="description" content="Project details.">
-  <title>Ghadeer Al Jufout | AutoML Selector</title>
+  <title>Ghadeer Al Jufout | Custome Search Engine</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,18 +27,18 @@ EMAIL: galjufou@uci.edu
         </nav>
 
         <div class="page-content">
-          <h2 class="page-title">AutoML Selector</h2>
+          <h2 class="page-title">Custome Search Engine</h2>
 
           <div class="project-detail">
-            <img class="project-detail-img" src="images/project1.jpg" alt="Project One preview image">
+            <img class="project-detail-img" src="images/project3.jpg" alt="Project One preview image">
 
             <p class="project-detail-text">
-              An AutoML system that automatically chooses the best machine learning model for predicting workloads 
-              in distributed systems, focusing on accuracy, efficiency, and scalability.
+              A Python-based search engine that crawls and indexes hundreds of webpages. 
+              It ranks results using similarity scoring while respecting crawling limits and site rules.
             </p>
 
             <p class="project-detail-links">
-              <a class="detail-link" href="https://github.com/Ghadeer122003/autoML-Selector" target="_blank" rel="noopener">
+              <a class="detail-link" href="https://github.com/Ghadeer122003/Task-Manager-For-Canvas" target="_blank" rel="noopener">
                 View on GitHub
               </a>
             </p>
