--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@ EMAIL: galjufou@uci.edu
           <a href="index.html">Home</a>
           <a href="index.html#about">About</a>
           <a href="projects.html">Projects</a>
-          <a href="resume.pdf" target="_blank">Resume</a>
+          <a href="resume.html">Resume</a>
           <a href="contact.html">Contact</a>
         </nav>
 
@@ -32,19 +32,19 @@ EMAIL: galjufou@uci.edu
           <div class="projects-grid">
             <article class="project-card">
               <img class="project-img" src="images/project1.jpg" alt="Project 1 preview image">
-              <h3 class="project-title">Project One</h3>
+              <h3 class="project-title">AutoML Selector</h3>
               <a class="learn-more" href="project-1.html">Learn more</a>
             </article>
 
             <article class="project-card">
               <img class="project-img" src="images/project2.jpg" alt="Project 2 preview image">
-              <h3 class="project-title">Project Two</h3>
+              <h3 class="project-title">P2P</h3>
               <a class="learn-more" href="project-2.html">Learn more</a>
             </article>
 
             <article class="project-card">
               <img class="project-img" src="images/project3.jpg" alt="Project 3 preview image">
-              <h3 class="project-title">Project Three</h3>
+              <h3 class="project-title">Custome Search Engine</h3>
               <a class="learn-more" href="project-3.html">Learn more</a>
             </article>
           </div>
