Removed the contact by email & message page and instead added my email and LinkedIn in a "Let's connect" page

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ EMAIL: galjufou@uci.edu
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Ghadeer Al Jufout">
-  <meta name="description" content="Contact page for Ghadeer Al Jufout.">
+  <meta name="description" content="Contact information for Ghadeer Al Jufout.">
   <title>Ghadeer Al Jufout | Contact</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,39 +17,39 @@ EMAIL: galjufou@uci.edu
   <main>
     <section class="contact-page">
       <div class="page-layout">
+
+        <!-- LEFT NAV -->
         <nav class="about-nav" aria-label="Site navigation">
-        <a href="index.html">Home</a>
-        <a href="index.html#about">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
+          <a href="index.html">Home</a>
+          <a href="index.html#about">About</a>
+          <a href="projects.html">Projects</a>
+          <a href="resume.html">Resume</a>
+          <a href="contact.html">Contact</a>
         </nav>
 
+        <!-- RIGHT CONTENT -->
         <div class="page-content">
-          <h2 class="page-title">CONTACT ME</h2>
+          <h2 class="page-title">LET'S CONNECT</h2>
+          <p class="contact-intro">
+          Feel free to reach out for opportunities, collaboration, or just to connect!
+          </p>
 
-          <form class="contact-form"
-                action="mailto:galjufou@uci.edu"
-                method="post"
-                enctype="text/plain">
-            <label>
-              <span>Your name</span>
-              <input type="text" name="name" required>
-            </label>
 
-            <label>
-              <span>Your email</span>
-              <input type="email" name="email" required>
-            </label>
+          <div class="contact-info">
+            <p class="contact-line">
+              <strong>Email</strong><br>
+              <a href="mailto:galjufou@uci.edu">galjufou@uci.edu</a>
+            </p>
 
-            <label>
-              <span>Your message</span>
-              <textarea name="message" rows="3" required></textarea>
-            </label>
-
-            <button type="submit" class="send-btn">Send</button>
-          </form>
+            <p class="contact-line">
+              <strong>LinkedIn</strong><br>
+              <a href="https://www.linkedin.com/in/ghadeer03" target="_blank" rel="noopener">
+                linkedin.com/in/ghadeer03
+              </a>
+            </p>
+          </div>
         </div>
+
       </div>
     </section>
   </main>
