--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@ EMAIL: galjufou@uci.edu
     <section class="contact-page">
       <div class="page-layout">
 
-        <!-- LEFT NAV -->
+        <!-- advanced feature-->
         <nav class="about-nav" aria-label="Site navigation">
           <a href="index.html">Home</a>
           <a href="index.html#about">About</a>
@@ -26,8 +26,7 @@ EMAIL: galjufou@uci.edu
           <a href="resume.html">Resume</a>
           <a href="contact.html">Contact</a>
         </nav>
-
-        <!-- RIGHT CONTENT -->
+        
         <div class="page-content">
           <h2 class="page-title">LET'S CONNECT</h2>
           <p class="contact-intro">
