--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@ EMAIL: galjufou@uci.edu
 
   <div class="about-layout">
 
-  <!-- LEFT COLUMN -->
   <aside class="about-left">
     <img
       class="profile-pic"
@@ -62,7 +61,6 @@ EMAIL: galjufou@uci.edu
     </nav>
   </aside>
 
-  <!-- RIGHT COLUMN -->
   <div class="about-text">
   <p>
     I am a Software Engineering student at UC Irvine with a strong interest in how modern
@@ -90,9 +88,9 @@ EMAIL: galjufou@uci.edu
     is always something new to learn, refine, or improve, and I enjoy being part of a
     field that is constantly evolving alongside the people who use it.
   </p>
-  </div> <!-- closes .about-text -->
+  </div> <!-- I fixed those from HTML validator -->
 
-  </div> <!-- closes .about-layout -->
+  </div> <!-- I fixed those from HTML validator -->
 </section>
 
 
